--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,7 @@ h5.subtitle {
 }
 
 .banner-2 {
-  background: url("../images/banner/slider-3.jpg");
+  background: url("../images/banner/banner-3.jpg");
   background-size: cover;
   position: relative;
 }
@@ -596,7 +596,7 @@ INner Pages
 }
 
 .page-banner-area {
-  background: url("../images/banner/1.jpg") no-repeat 50% 50%;
+  background: url("/images/banner/banner-3.jpg") no-repeat 50% 50%;
   background-size: cover;
 }
 
